[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "devops-incident-recovery"
version = "1.0.0"
description = "OpenEnv environment simulating real-world DevOps incident recovery scenarios"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
inference = ["openai>=1.0"]
dev = ["pytest", "httpx", "openai>=1.0"]
